[gd_scene load_steps=12 format=3 uid="uid://dgfgkxjaxn63e"]

[ext_resource type="Theme" uid="uid://lo0c8ynv3d74" path="res://interface/entity/entity_frame_theme.tres" id="1_14jng"]
[ext_resource type="Script" path="res://interface/entity/entity_frame.gd" id="2_qw5n1"]
[ext_resource type="Texture2D" uid="uid://dximauj3dgumu" path="res://interface/util/castle_bar_texture.tres" id="3_iplyn"]
[ext_resource type="Texture2D" uid="uid://dhyovlbo2dfvm" path="res://assets/icons/net/game-icons/battle-gear.png" id="3_juwul"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l536v"]
border_color = Color(0.196078, 0.196078, 0.196078, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ajag8"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_udeaw"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0gl4l"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u42d8"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t0iuo"]
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hg02"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="EntityFrame" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_14jng")
script = ExtResource("2_qw5n1")

[node name="CharacterFrame" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 51.0
offset_right = 251.0
offset_bottom = 70.0
theme_override_constants/separation = 0

[node name="NameContainer" type="PanelContainer" parent="CharacterFrame"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l536v")

[node name="NameLabel" type="Label" parent="CharacterFrame/NameContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="CharacterFrame"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ajag8")

[node name="MarginContainer" type="MarginContainer" parent="CharacterFrame/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="ResourceContainer" type="VBoxContainer" parent="CharacterFrame/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="CharacterFrame/PanelContainer/MarginContainer/ResourceContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 2

[node name="HealthBarContainer" type="PanelContainer" parent="CharacterFrame/PanelContainer/MarginContainer/ResourceContainer/MarginContainer"]
clip_children = 2
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_udeaw")

[node name="HealthBar" type="TextureProgressBar" parent="CharacterFrame/PanelContainer/MarginContainer/ResourceContainer/MarginContainer/HealthBarContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
step = 0.1
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("3_iplyn")
texture_progress = ExtResource("3_iplyn")
tint_progress = Color(0, 1, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="CharacterFrame/PanelContainer/MarginContainer/ResourceContainer/MarginContainer/HealthBarContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4

[node name="HealthLabel" type="Label" parent="CharacterFrame/PanelContainer/MarginContainer/ResourceContainer/MarginContainer/HealthBarContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 12

[node name="MarginContainer2" type="MarginContainer" parent="CharacterFrame/PanelContainer/MarginContainer/ResourceContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 2

[node name="ResourceBarContainer" type="PanelContainer" parent="CharacterFrame/PanelContainer/MarginContainer/ResourceContainer/MarginContainer2"]
clip_children = 2
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0gl4l")

[node name="SecondaryBar" type="TextureProgressBar" parent="CharacterFrame/PanelContainer/MarginContainer/ResourceContainer/MarginContainer2/ResourceBarContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
step = 0.1
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("3_iplyn")
texture_progress = ExtResource("3_iplyn")
tint_progress = Color(0, 1, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="CharacterFrame/PanelContainer/MarginContainer/ResourceContainer/MarginContainer2/ResourceBarContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4

[node name="ResourceText" type="Label" parent="CharacterFrame/PanelContainer/MarginContainer/ResourceContainer/MarginContainer2/ResourceBarContainer/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 12

[node name="CharacterPortrait" type="Control" parent="."]
clip_children = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0
theme = ExtResource("1_14jng")

[node name="FrameContainer" type="PanelContainer" parent="CharacterPortrait"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u42d8")

[node name="PortraitContainer" type="PanelContainer" parent="CharacterPortrait"]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t0iuo")

[node name="TextureRect" type="TextureRect" parent="CharacterPortrait/PortraitContainer"]
layout_mode = 2
texture = ExtResource("3_juwul")
expand_mode = 2

[node name="LevelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 0
offset_left = 42.0
offset_top = 52.0
offset_right = 66.0
offset_bottom = 77.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3hg02")

[node name="LevelLabel" type="Label" parent="LevelContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
